Bug 814418 - Fix some warnings about unused variables. r=ehsan