layout/xul/base/src/tree/src/nsTreeBodyFrame.cpp
@@ -1305,7 +1305,7 @@ nsTreeBodyFrame::AdjustForCellText(nsAutoString& aText,
   nscoord maxWidth = aTextRect.width;
 
   if (aColumn->Overflow()) {
-    nsresult rv;
+    DebugOnly<nsresult> rv;
     nsTreeColumn* nextColumn = aColumn->GetNext();
     while (nextColumn && width > maxWidth) {
       while (nextColumn) {
